--- a/src/TeamView.css
+++ b/src/TeamView.css
@@ -15,9 +15,10 @@
   }
   
   .team-logo {
-    width: 70px; /* Adjust size as needed */
-    height: 70px; /* Adjust size as needed */
+    width: 150px;
+    height: 150px;
     margin-right: 10px;
+    border: 5px solid #ffffff;
   }
   .team-points-details{
     display: flex;
