--- a/src/PlayerCard.css
+++ b/src/PlayerCard.css
@@ -11,8 +11,8 @@
     transform: translateY(20px);
     animation: fadeInUp 0.5s ease forwards;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add elevation effect */
-    width: 700px;
-    height: 250px;
+    width: 80vw;
+    height: 70vh;
   }
   .card-logo{
     display: flex;
@@ -40,8 +40,8 @@
   }
   
   .player-photo img {
-    width: 150px;
-    height: 150px;
+    width: 450px;
+    height: 450px;
     object-fit: cover;
     animation: fadeIn 3s normal;
   }
@@ -74,12 +74,13 @@
     }
   }
   
-  .player-info h2 {
-    margin-top: 0;
+  .player-info h1 {
+    margin-top: 50px;
   }
   
   .player-info p {
     margin: 5px 0;
+    font-size: 26px;
   }
   
   .player-card {
@@ -108,6 +109,8 @@
   }
   
   .team-list {
+    position: absolute;
+    right: -10px;
     list-style: none;
     color: black;
     padding: 0;
@@ -126,17 +129,37 @@
   .team-list li:hover {
     background-color: #f0f0f0;
   }
-    
-  .sold-image {
-    background-image: url("https://png.pngtree.com/png-clipart/20230423/ourmid/pngtree-sold-rubber-stamp-png-image_6718966.png");
-    height: 100px;
-    background-size: contain;
-    width: 100px;
-    background-repeat: no-repeat;
-    left: 30px;
-    position: absolute;
-    top: 150px;
+  
+  .bidding-price{
+    font-size: xxx-large;
+    color: goldenrod;
+    -webkit-text-stroke: 1px #ffffc2;
   }
+  .sold-image {
+    background-image: url(https://png.pngtree.com/png-clipart/20230423/ourmid/pngtree-sold-rubber-stamp-png-image_6718966.png);
+    height: 250px;
+    background-size: contain;
+    width: 400px;
+    background-repeat: no-repeat;
+    left: 110px;
+    position: absolute;
+    top: 270px;
+    animation: soldAnimation 0.5s ease forwards 0.2s;
+    transform: rotateZ(330deg); 
+    opacity: 0;
+  }
+
+  @keyframes soldAnimation {
+    from {
+      opacity: 0;
+      transform: rotateZ(38deg);
+    }
+    to {
+      opacity: 1;
+      transform: rotateZ(-30deg);
+    }
+  }
+
 
   .sold-information {
     position: relative;
@@ -145,7 +168,7 @@
   
   /* CSS */
   .button-8 {
-    /* right: 20px; */
+    right: 40px;
     top: 20px;
     background-color: #fe6100;
     border-radius: 3px;
@@ -156,7 +179,7 @@
     cursor: pointer;
     display: inline-block;
     font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
-    font-size: 13px;
+    font-size: 20px;
     font-weight: 400;
     line-height: 1.15385;
     margin: 0;
